src/main/java/compiladores/fortall/parser/FortallParser.java
// Generated from Fortall.g4 by ANTLR 4.13.2
package compiladores.fortall.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class FortallParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ATR=1, AP=2, FP=3, VR=4, PV=5, DP=6, VAR=7, PROGRAMA=8, TIPO=9, INICIO=10, 
		FIM=11, ESCREVER=12, LER=13, SE=14, ENTAO=15, SENAO=16, ENQUANTO=17, FACA=18, 
		EQ=19, NE=20, GT=21, GE=22, LT=23, LE=24, MAIS=25, MENOS=26, MULT=27, 
		DIV=28, STRING=29, ID=30, NUM=31, WS=32;
	public static final int
		RULE_programa = 0, RULE_declaracoes = 1, RULE_variaveis = 2, RULE_mais_variaveis = 3, 
		RULE_ids = 4, RULE_mais_ids = 5, RULE_corpo = 6, RULE_comandos = 7, RULE_mais_comandos = 8, 
		RULE_comando = 9, RULE_escrita = 10, RULE_valores_string = 11, RULE_valor_string = 12, 
		RULE_mais_valores_string = 13, RULE_leitura = 14, RULE_atribuicao = 15, 
		RULE_se = 16, RULE_senao = 17, RULE_loop = 18, RULE_expressao = 19, RULE_expressao_aritmetica = 20, 
		RULE_expressao_logica = 21, RULE_relacao = 22, RULE_aritmetica = 23, RULE_termo = 24, 
		RULE_precedente = 25, RULE_fator = 26, RULE_sinalizador = 27, RULE_valor = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "declaracoes", "variaveis", "mais_variaveis", "ids", "mais_ids", 
			"corpo", "comandos", "mais_comandos", "comando", "escrita", "valores_string", 
			"valor_string", "mais_valores_string", "leitura", "atribuicao", "se", 
			"senao", "loop", "expressao", "expressao_aritmetica", "expressao_logica", 
			"relacao", "aritmetica", "termo", "precedente", "fator", "sinalizador", 
			"valor"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':='", "'('", "')'", "','", "';'", "':'", "'var'", "'programa'", 
			null, "'in\\u00C3\\u00ADcio'", "'fim'", "'escrever'", "'ler'", "'se'", 
			"'ent\\u00C3\\u00A3o'", "'sen\\u00C3\\u00A3o'", "'enquanto'", "'fa\\u00C3\\u00A7a'", 
			"'='", "'<>'", "'>'", "'>='", "'<'", "'<='", "'+'", "'-'", "'*'", "'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ATR", "AP", "FP", "VR", "PV", "DP", "VAR", "PROGRAMA", "TIPO", 
			"INICIO", "FIM", "ESCREVER", "LER", "SE", "ENTAO", "SENAO", "ENQUANTO", 
			"FACA", "EQ", "NE", "GT", "GE", "LT", "LE", "MAIS", "MENOS", "MULT", 
			"DIV", "STRING", "ID", "NUM", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Fortall.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FortallParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode PROGRAMA() { return getToken(FortallParser.PROGRAMA, 0); }
		public TerminalNode ID() { return getToken(FortallParser.ID, 0); }
		public TerminalNode PV() { return getToken(FortallParser.PV, 0); }
		public DeclaracoesContext declaracoes() {
			return getRuleContext(DeclaracoesContext.class,0);
		}
		public CorpoContext corpo() {
			return getRuleContext(CorpoContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FortallVisitor ) return ((FortallVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(PROGRAMA);
			setState(59);
			match(ID);
			setState(60);
			match(PV);
			setState(61);
			declaracoes();
			setState(62);
			corpo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracoesContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(FortallParser.VAR, 0); }
		public VariaveisContext variaveis() {
			return getRuleContext(VariaveisContext.class,0);
		}
		public DeclaracoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).enterDeclaracoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).exitDeclaracoes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FortallVisitor ) return ((FortallVisitor<? extends T>)visitor).visitDeclaracoes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracoesContext declaracoes() throws RecognitionException {
		DeclaracoesContext _localctx = new DeclaracoesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracoes);
		try {
			setState(67);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				match(VAR);
				setState(65);
				variaveis();
				}
				break;
			case INICIO:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariaveisContext extends ParserRuleContext {
		public IdsContext ids() {
			return getRuleContext(IdsContext.class,0);
		}
		public TerminalNode DP() { return getToken(FortallParser.DP, 0); }
		public TerminalNode TIPO() { return getToken(FortallParser.TIPO, 0); }
		public TerminalNode PV() { return getToken(FortallParser.PV, 0); }
		public Mais_variaveisContext mais_variaveis() {
			return getRuleContext(Mais_variaveisContext.class,0);
		}
		public VariaveisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variaveis; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).enterVariaveis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).exitVariaveis(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FortallVisitor ) return ((FortallVisitor<? extends T>)visitor).visitVariaveis(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariaveisContext variaveis() throws RecognitionException {
		VariaveisContext _localctx = new VariaveisContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variaveis);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			ids();
			setState(70);
			match(DP);
			setState(71);
			match(TIPO);
			setState(72);
			match(PV);
			setState(73);
			mais_variaveis();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Mais_variaveisContext extends ParserRuleContext {
		public VariaveisContext variaveis() {
			return getRuleContext(VariaveisContext.class,0);
		}
		public Mais_variaveisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mais_variaveis; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).enterMais_variaveis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).exitMais_variaveis(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FortallVisitor ) return ((FortallVisitor<? extends T>)visitor).visitMais_variaveis(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Mais_variaveisContext mais_variaveis() throws RecognitionException {
		Mais_variaveisContext _localctx = new Mais_variaveisContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mais_variaveis);
		try {
			setState(77);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				variaveis();
				}
				break;
			case INICIO:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdsContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(FortallParser.ID, 0); }
		public Mais_idsContext mais_ids() {
			return getRuleContext(Mais_idsContext.class,0);
		}
		public IdsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ids; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).enterIds(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).exitIds(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FortallVisitor ) return ((FortallVisitor<? extends T>)visitor).visitIds(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdsContext ids() throws RecognitionException {
		IdsContext _localctx = new IdsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ids);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(ID);
			setState(80);
			mais_ids();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Mais_idsContext extends ParserRuleContext {
		public TerminalNode VR() { return getToken(FortallParser.VR, 0); }
		public IdsContext ids() {
			return getRuleContext(IdsContext.class,0);
		}
		public Mais_idsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mais_ids; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).enterMais_ids(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).exitMais_ids(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FortallVisitor ) return ((FortallVisitor<? extends T>)visitor).visitMais_ids(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Mais_idsContext mais_ids() throws RecognitionException {
		Mais_idsContext _localctx = new Mais_idsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_mais_ids);
		try {
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VR:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				match(VR);
				setState(83);
				ids();
				}
				break;
			case FP:
			case DP:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CorpoContext extends ParserRuleContext {
		public TerminalNode INICIO() { return getToken(FortallParser.INICIO, 0); }
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public TerminalNode FIM() { return getToken(FortallParser.FIM, 0); }
		public CorpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_corpo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).enterCorpo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).exitCorpo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FortallVisitor ) return ((FortallVisitor<? extends T>)visitor).visitCorpo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CorpoContext corpo() throws RecognitionException {
		CorpoContext _localctx = new CorpoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_corpo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(INICIO);
			setState(88);
			comandos();
			setState(89);
			match(FIM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandosContext extends ParserRuleContext {
		public ComandoContext comando() {
			return getRuleContext(ComandoContext.class,0);
		}
		public TerminalNode PV() { return getToken(FortallParser.PV, 0); }
		public Mais_comandosContext mais_comandos() {
			return getRuleContext(Mais_comandosContext.class,0);
		}
		public ComandosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).enterComandos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).exitComandos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FortallVisitor ) return ((FortallVisitor<? extends T>)visitor).visitComandos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandosContext comandos() throws RecognitionException {
		ComandosContext _localctx = new ComandosContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_comandos);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			comando();
			setState(92);
			match(PV);
			setState(93);
			mais_comandos();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Mais_comandosContext extends ParserRuleContext {
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public Mais_comandosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mais_comandos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).enterMais_comandos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).exitMais_comandos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FortallVisitor ) return ((FortallVisitor<? extends T>)visitor).visitMais_comandos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Mais_comandosContext mais_comandos() throws RecognitionException {
		Mais_comandosContext _localctx = new Mais_comandosContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_mais_comandos);
		try {
			setState(97);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ESCREVER:
			case LER:
			case SE:
			case ENQUANTO:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				comandos();
				}
				break;
			case FIM:
			case SENAO:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandoContext extends ParserRuleContext {
		public EscritaContext escrita() {
			return getRuleContext(EscritaContext.class,0);
		}
		public LeituraContext leitura() {
			return getRuleContext(LeituraContext.class,0);
		}
		public AtribuicaoContext atribuicao() {
			return getRuleContext(AtribuicaoContext.class,0);
		}
		public SeContext se() {
			return getRuleContext(SeContext.class,0);
		}
		public LoopContext loop() {
			return getRuleContext(LoopContext.class,0);
		}
		public ComandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).enterComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).exitComando(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FortallVisitor ) return ((FortallVisitor<? extends T>)visitor).visitComando(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandoContext comando() throws RecognitionException {
		ComandoContext _localctx = new ComandoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_comando);
		try {
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ESCREVER:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				escrita();
				}
				break;
			case LER:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				leitura();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(101);
				atribuicao();
				}
				break;
			case SE:
				enterOuterAlt(_localctx, 4);
				{
				setState(102);
				se();
				}
				break;
			case ENQUANTO:
				enterOuterAlt(_localctx, 5);
				{
				setState(103);
				loop();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EscritaContext extends ParserRuleContext {
		public TerminalNode ESCREVER() { return getToken(FortallParser.ESCREVER, 0); }
		public TerminalNode AP() { return getToken(FortallParser.AP, 0); }
		public Valores_stringContext valores_string() {
			return getRuleContext(Valores_stringContext.class,0);
		}
		public TerminalNode FP() { return getToken(FortallParser.FP, 0); }
		public EscritaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_escrita; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).enterEscrita(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).exitEscrita(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FortallVisitor ) return ((FortallVisitor<? extends T>)visitor).visitEscrita(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EscritaContext escrita() throws RecognitionException {
		EscritaContext _localctx = new EscritaContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_escrita);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(ESCREVER);
			setState(107);
			match(AP);
			setState(108);
			valores_string();
			setState(109);
			match(FP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Valores_stringContext extends ParserRuleContext {
		public Valor_stringContext valor_string() {
			return getRuleContext(Valor_stringContext.class,0);
		}
		public Mais_valores_stringContext mais_valores_string() {
			return getRuleContext(Mais_valores_stringContext.class,0);
		}
		public Valores_stringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valores_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).enterValores_string(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).exitValores_string(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FortallVisitor ) return ((FortallVisitor<? extends T>)visitor).visitValores_string(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Valores_stringContext valores_string() throws RecognitionException {
		Valores_stringContext _localctx = new Valores_stringContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_valores_string);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			valor_string();
			setState(112);
			mais_valores_string();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Valor_stringContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(FortallParser.STRING, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public Valor_stringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valor_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).enterValor_string(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).exitValor_string(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FortallVisitor ) return ((FortallVisitor<? extends T>)visitor).visitValor_string(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Valor_stringContext valor_string() throws RecognitionException {
		Valor_stringContext _localctx = new Valor_stringContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_valor_string);
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				match(STRING);
				}
				break;
			case AP:
			case MENOS:
			case ID:
			case NUM:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				expressao();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Mais_valores_stringContext extends ParserRuleContext {
		public TerminalNode VR() { return getToken(FortallParser.VR, 0); }
		public Valores_stringContext valores_string() {
			return getRuleContext(Valores_stringContext.class,0);
		}
		public Mais_valores_stringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mais_valores_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).enterMais_valores_string(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).exitMais_valores_string(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FortallVisitor ) return ((FortallVisitor<? extends T>)visitor).visitMais_valores_string(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Mais_valores_stringContext mais_valores_string() throws RecognitionException {
		Mais_valores_stringContext _localctx = new Mais_valores_stringContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_mais_valores_string);
		try {
			setState(121);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VR:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				match(VR);
				setState(119);
				valores_string();
				}
				break;
			case FP:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LeituraContext extends ParserRuleContext {
		public TerminalNode LER() { return getToken(FortallParser.LER, 0); }
		public TerminalNode AP() { return getToken(FortallParser.AP, 0); }
		public IdsContext ids() {
			return getRuleContext(IdsContext.class,0);
		}
		public TerminalNode FP() { return getToken(FortallParser.FP, 0); }
		public LeituraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_leitura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).enterLeitura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FortallListener ) ((FortallListener)listener).exitLeitura(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FortallVisitor ) return ((FortallVisitor<? extends T>)visitor).visitLeitura(this);
			else return visitor.visitChildren(this);
		}
	}
